fix: update links in introduction.md for correct navigation

--- a/getting-started/quickstart.mdx
+++ b/getting-started/quickstart.mdx
@@ -4,7 +4,7 @@ description: "Follow these steps to deploy your first Shuttle project"
 icon: "download"
 ---
 
-# Deploy your project
+## Deploy your project
 
 <span style={{ fontSize: '1.1em', fontWeight: 500 }}>
 
