--- a/welcome/introduction.mdx
+++ b/welcome/introduction.mdx
@@ -16,7 +16,7 @@ icon: "hand-wave"
   <Card
     title="Tutorials"
     icon="book"
-    href="/examples"
+    href="/tutorials/your-first-app"
     color="#f8b5F2"
   >
    Follow one of our tutorials
@@ -24,7 +24,7 @@ icon: "hand-wave"
   <Card
     title="How-to Guides"
     icon="sparkles"
-    href="/templates"
+    href="/how-to-guides/quick-deployment"
     color="#ffdf54"
   >
     Get started from one of many templates
@@ -32,7 +32,7 @@ icon: "hand-wave"
   <Card
     title="Templates"
     icon="list-check"
-    href="/templates/tutorials"
+    href="/templates/overview"
     color="#a26"
   >
     Deploy a ready made app
