feat: update navigation structure by consolidating key concepts and references cards

--- a/welcome/introduction.mdx
+++ b/welcome/introduction.mdx
@@ -37,4 +37,21 @@ icon: "hand-wave"
   >
     Deploy a ready made app
   </Card>
+  
+
+  <Card
+    title="References"
+    icon="book"
+    href="/templates/overview"
+    color="#a26">
+
+  </Card>
+
+  <Card
+    title="Key Concepts"
+    icon="magnifying-glass"
+    href="/templates/overview"
+    color="#a26">
+    
+  </Card>
 </CardGroup>
