fix: disabling cf proxy is not required

--- a/docs/domain-names.mdx
+++ b/docs/domain-names.mdx
@@ -25,7 +25,8 @@ The process for setting up the required DNS rule looks different depending on wh
 
         ### Root domain
 
-        Add a `CNAME` record from `@` to your `*.shuttle.app` subdomain. Disable the Proxy.
+        Add a `CNAME` record from `@` to your `*.shuttle.app` subdomain. The Cloudflare proxy can be enabled or disabled,
+        depending on your needs.
 
         ![cloudflare root cname](/images/cloudflare_root_cname.png)
 
