feat: clarify shared pg limitations, rds pricing

--- a/resources/shuttle-aws-rds.mdx
+++ b/resources/shuttle-aws-rds.mdx
@@ -9,6 +9,12 @@ This plugin provisions AWS RDS databases on [Shuttle](https://www.shuttle.dev). 
 - MySQL
 - MariaDB
 
+<Warning>
+This resource is available on the Pro tier and up. Provisioning it incurs additional charges, except
+on the Growth tier, where the first instance is included. For details, see our
+[pricing page](https://www.shuttle.dev/pricing).
+</Warning>
+
 ## RDS vs Shared DB
 
 - Dedicated Instance: Each AWS RDS database is it's own dedicated instance.
