fix: too dedicated

--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -14,7 +14,7 @@ If you want a high performing and isolated database, we also offer dedicated [Sh
 <Warning>
 The Shared Database is intended primarily for experimentation and development. Since it runs on AWS
 RDS instances shared with other Shuttle users, performance may be impacted during times of high demand
-from other databases. For business-critical workloads, we recommend using a dedicated  dedicated
+from other databases. For business-critical workloads, we recommend using a dedicated
 [Shuttle AWS RDS database](./shuttle-aws-rds).
 </Warning>
 
