--- a/resources/shuttle-shared-db.mdx
+++ b/resources/shuttle-shared-db.mdx
@@ -11,6 +11,13 @@ If you want a high performing and isolated database, we also offer dedicated [Sh
 
 <Tip>You can connect to any type of remotely hosted database from your code, so do not let our current database offerings limit your creativity! Got other databases you want to see on Shuttle? Let us know!</Tip>
 
+<Warning>
+The Shared Database is intended primarily for experimentation and development. Since it runs on AWS
+RDS instances shared with other Shuttle users, performance may be impacted during times of high demand
+from other databases. For business-critical workloads, we recommend using a dedicated
+[Shuttle AWS RDS database](./shuttle-aws-rds).
+</Warning>
+
 The Shuttle Shared Postgres cluster is RDS-based and uses Postgres version 16. Contact support if you want to enable common [Postgres Extensions](https://docs.aws.amazon.com/AmazonRDS/latest/PostgreSQLReleaseNotes/postgresql-extensions.html#postgresql-extensions-16x) for your project.
 
 ## Usage
