Cursor one click install

--- a/integrations/mcp-server.mdx
+++ b/integrations/mcp-server.mdx
@@ -20,7 +20,20 @@ The Shuttle MCP server comes with the **Shuttle CLI (version 0.56 and later)**, 
 
 ## Configuration
 
-Choose your preferred AI coding environment and add the Shuttle MCP server configuration.
+For **Cursor users**, you can install the Shuttle MCP server with one click:
+
+<a
+  href="cursor://anysphere.cursor-deeplink/mcp/install?name=Shuttle&config=eyJjb21tYW5kIjoic2h1dHRsZSBtY3Agc3RhcnQifQ"
+  target="_blank"
+>
+  <img
+    src="https://cursor.com/deeplink/mcp-install-light.svg"
+    alt="Install MCP Server"
+    noZoom
+  />
+</a>
+
+Or choose your preferred AI coding environment and add the Shuttle MCP server configuration manually:
 
 <CodeGroup>
 
