domains can be added via console

--- a/docs/domain-names.mdx
+++ b/docs/domain-names.mdx
@@ -67,6 +67,12 @@ The process for setting up the required DNS rule looks different depending on wh
 
 ## 2. Set up SSL certificate
 
+### a. via Console
+
+Once the DNS records have propagated, submit the domain name in your project's domain settings on the Console.
+
+### b. via CLI
+
 Once the DNS records have propagated, add an SSL certificate and start receiving HTTPS traffic by running:
 
 ```bash
