--- a/docs/builds.mdx
+++ b/docs/builds.mdx
@@ -7,7 +7,8 @@ icon: "hammer"
 Shuttle builds run on AWS CodeBuild, where we compile your Rust app and place it in a Shuttle `runtime` Debian-based Docker image.
 
 ## Build architecture
-Unless you are on the Growth tier, your projects will primarily be built and run on an Arm64 (aarch64) architecture.
+
+Shuttle builds and runs images for the Arm64 (aarch64) architecture by default. Pro+ users can reach out to Shuttle Support if they require the x86_64 architecture.
 
 ## Builder image
 
@@ -15,7 +16,7 @@ The Rust builder image is based on [cargo-chef](https://github.com/LukeMathWalke
 
 ### Rust toolchain
 
-The Rust version in the image is regularly updated to the latest stable `stable-x86_64-unknown-linux-gnu` toolchain or the `stable-aarch64-unknown-linux-gnu` depending on your project's build architecture.
+The Rust version in the image is regularly updated to the latest `stable-aarch64-unknown-linux-gnu` toolchain (or `stable-x86_64-unknown-linux-gnu` depending on your project's build architecture).
 
 By default, the `wasm32-unknown-unknown` target is installed, which enables compiling WASM frontends.
 
