update axum, actix examples

--- a/examples/actix-cookie-authentication.mdx
+++ b/examples/actix-cookie-authentication.mdx
@@ -25,13 +25,13 @@ The example uses `actix-identity` and `actix-session` with a cookie store to ass
 
 ```toml Cargo.toml
 [package]
-name = "authentication"
+name = "cookie-authentication"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-identity = "0.6.0"
-actix-session = { version = "0.8.0", features = ["cookie-session"] }
+actix-identity = "0.7.1"
+actix-session = { version = "0.9.0", features = ["cookie-session"] }
 actix-web = "4.3.1"
 shuttle-actix-web = "0.57.0"
 shuttle-runtime = "0.57.0"
@@ -39,24 +39,23 @@ tokio = "1.26.0"
 ```
 Your `main.rs` should look like this:
 
-```Rust main.rs
-use actix_web::{get, web::ServiceConfig};
-use shuttle_actix_web::ShuttleActixWeb;
+```rust main.rs
 use actix_identity::{Identity, IdentityMiddleware};
 use actix_session::{config::PersistentSession, storage::CookieSessionStore, SessionMiddleware};
 use actix_web::{
     cookie::{time::Duration, Key},
-    error,
+    error, get,
     http::StatusCode,
-    middleware, web, HttpMessage as _, HttpRequest, Responder,
+    middleware,
+    web::{self, ServiceConfig},
+    HttpMessage as _, HttpRequest, Responder,
 };
+use shuttle_actix_web::ShuttleActixWeb;
 
 const FIVE_MINUTES: Duration = Duration::minutes(5);
 
 #[get("/")]
 async fn index(identity: Option<Identity>) -> actix_web::Result<impl Responder> {
-	// if not logged in, return "anonymous"
-	// else, return the user ID
     let id = match identity.map(|id| id.id()) {
         None => "anonymous".to_owned(),
         Some(Ok(id)) => id,
@@ -68,6 +67,9 @@ async fn index(identity: Option<Identity>) -> actix_web::Result<impl Responder> 
 
 #[get("/login")]
 async fn login(req: HttpRequest) -> impl Responder {
+    // some kind of authentication should happen here
+
+    // attach a verified user identity to the active session
     Identity::login(&req.extensions(), "user1".to_owned()).unwrap();
 
     web::Redirect::to("/").using_status_code(StatusCode::FOUND)
@@ -81,18 +83,19 @@ async fn logout(id: Identity) -> impl Responder {
 }
 
 #[shuttle_runtime::main]
-async fn actix_web() -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Send + Clone + 'static> {
+async fn main() -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Send + Clone + 'static> {
     // Generate a random secret key. Note that it is important to use a unique
     // secret key for every project. Anyone with access to the key can generate
     // authentication cookies for any user!
     //
-    // If the secret key is read from a file or the environment, make sure it is generated securely.
+    // When deployed the secret key should be read from deployment secrets.
+    //
     // For example, a secure random key (in base64 format) can be generated with the OpenSSL CLI:
     // ```
     // openssl rand -base64 64
     // ```
     //
-    // Then decoded and used converted to a Key:
+    // Then decoded and converted to a Key:
     // ```
     // let secret_key = Key::from(base64::decode(&private_key_base64).unwrap());
     // ```
@@ -100,20 +103,21 @@ async fn actix_web() -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Send +
 
     let config = move |cfg: &mut ServiceConfig| {
         cfg.service(
-		web::scope("/")
-			.service(index).service(login).service(logout)
-.wrap(IdentityMiddleware::default())
-            .wrap(
-                SessionMiddleware::builder(CookieSessionStore::default(), secret_key.clone())
-                    .cookie_name("auth-example".to_owned())
-                    .cookie_secure(false)
-                    .session_lifecycle(PersistentSession::default().session_ttl(FIVE_MINUTES))
-                    .build(),
-            )
-            .wrap(middleware::NormalizePath::trim())
-            .wrap(middleware::Logger::default())
-	);
-
+            web::scope("")
+                .service(index)
+                .service(login)
+                .service(logout)
+                .wrap(IdentityMiddleware::default())
+                .wrap(
+                    SessionMiddleware::builder(CookieSessionStore::default(), secret_key.clone())
+                        .cookie_name("auth-example".to_owned())
+                        .cookie_secure(false)
+                        .session_lifecycle(PersistentSession::default().session_ttl(FIVE_MINUTES))
+                        .build(),
+                )
+                .wrap(middleware::NormalizePath::trim())
+                .wrap(middleware::Logger::default()),
+        );
     };
 
     Ok(config.into())
