--- a/examples/actix-static-files.mdx
+++ b/examples/actix-static-files.mdx
@@ -19,19 +19,14 @@ shuttle init --from shuttle-hq/shuttle-examples --subfolder actix-web/static-fil
 
 <CodeGroup>
 ```rust src/main.rs
-use actix_files::NamedFile;
-use actix_web::{get, web::ServiceConfig, Responder};
+use actix_files::Files;
+use actix_web::web::ServiceConfig;
 use shuttle_actix_web::ShuttleActixWeb;
 
-#[get("/")]
-async fn index() -> impl Responder {
-    NamedFile::open_async("assets/index.html").await
-}
-
 #[shuttle_runtime::main]
-async fn actix_web() -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Send + Clone + 'static> {
+async fn main() -> ShuttleActixWeb<impl FnOnce(&mut ServiceConfig) + Send + Clone + 'static> {
     let config = move |cfg: &mut ServiceConfig| {
-        cfg.service(index);
+        cfg.service(Files::new("/", "assets"));
     };
 
     Ok(config.into())
@@ -57,8 +52,8 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-actix-web = "4.3.1"
 actix-files = "0.6.2"
+actix-web = "4.3.1"
 shuttle-actix-web = "0.57.0"
 shuttle-runtime = "0.57.0"
 tokio = "1.26.0"
