--- a/guides/cli.mdx
+++ b/guides/cli.mdx
@@ -21,9 +21,9 @@ shuttle <command> --help
 
 | Command     | Description |
 | ----------- | ----------- |
-| init        | Generate a Shuttle project from a template |
-| run         | Run a project locally |
-| deploy      | Deploy a project |
+| init        | Generate a Shuttle project from a template [aliases: i] |
+| run         | Run a project locally [aliases: r] |
+| deploy      | Deploy a project [aliases: d] |
 | deployment  | Manage deployments [aliases: depl] |
 | logs        | View build and deployment logs |
 | project     | Manage Shuttle projects [aliases: proj] |
@@ -35,6 +35,7 @@ shuttle <command> --help
 | generate    | Generate shell completions and man page |
 | feedback    | Open an issue on GitHub and provide feedback |
 | upgrade     | Upgrade the Shuttle CLI binary |
+| mcp         | Commands for the Shuttle MCP server |
 | help        | Print this message or the help of the given subcommand(s) |
 
 ## Cookbook / Cheat Sheet
