--- a/examples/axum-jwt-authentication.mdx
+++ b/examples/axum-jwt-authentication.mdx
@@ -28,7 +28,6 @@ shuttle init --from shuttle-hq/shuttle-examples --subfolder axum/jwt-authenticat
 <CodeGroup>
 ```rust main.rs
 use axum::{
-    async_trait,
     extract::FromRequestParts,
     http::{request::Parts, StatusCode},
     response::{IntoResponse, Response},
@@ -124,7 +123,6 @@ impl AuthBody {
 
 // implement FromRequestParts for Claims (the JWT struct)
 // FromRequestParts allows us to use Claims without consuming the request
-#[async_trait]
 impl<S> FromRequestParts<S> for Claims
 where
     S: Send + Sync,
@@ -210,21 +208,20 @@ enum AuthError {
 
 ```toml Cargo.toml
 [package]
-name = "authentication"
+name = "jwt-authentication"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7.3"
-axum-extra = { version = "0.9.1", features = ["typed-header"] }
+axum = "0.8"
+axum-extra = { version = "0.10", features = ["typed-header"] }
 jsonwebtoken = "8.3.0"
 once_cell = "1.18.0"
-serde = { version = "1.0.188", features = ["derive"] }
-serde_json = "1.0.107"
-shuttle-axum = "0.56.0"
-shuttle-runtime = "0.56.0"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+shuttle-axum = "0.57.0"
+shuttle-runtime = "0.57.0"
 tokio = "1.28.2"
-tracing-subscriber = "0.3.17"
 ```
 </CodeGroup>
 
