--- a/examples/axum-websockets.mdx
+++ b/examples/axum-websockets.mdx
@@ -60,7 +60,7 @@ struct Response {
 
 #[shuttle_runtime::main]
 async fn main() -> ShuttleAxum {
-    let (tx, rx) = watch::channel(Message::Text("{}".to_string()));
+    let (tx, rx) = watch::channel(Message::Text("{}".into()));
 
     let state = Arc::new(Mutex::new(State {
         clients_count: 0,
@@ -84,7 +84,7 @@ async fn main() -> ShuttleAxum {
             };
             let msg = serde_json::to_string(&response).unwrap();
 
-            if tx.send(Message::Text(msg)).is_err() {
+            if tx.send(Message::Text(msg.into())).is_err() {
                 break;
             }
 
@@ -94,7 +94,7 @@ async fn main() -> ShuttleAxum {
 
     let router = Router::new()
         .route("/websocket", get(websocket_handler))
-        .nest_service("/", ServeDir::new("static"))
+        .fallback_service(ServeDir::new("static"))
         .layer(Extension(state));
 
     Ok(router.into())
@@ -255,21 +255,22 @@ async fn websocket(stream: WebSocket, state: Arc<Mutex<State>>) {
 
 ```toml Cargo.toml
 [package]
+[package]
 name = "websocket"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = { version = "0.7.3", features = ["ws"] }
-chrono = { version = "0.4.26", features = ["serde"] }
+axum = { version = "0.8", features = ["ws"] }
+chrono = { version = "0.4", features = ["serde"] }
 futures = "0.3.28"
-reqwest = "0.11.23"
-serde = { version = "1.0.163", features = ["derive"] }
-serde_json = "1.0.96"
-shuttle-axum = "0.56.0"
-shuttle-runtime = "0.56.0"
-tokio = "1.28.2"
-tower-http = { version = "0.5.0", features = ["fs"] }
+reqwest = "0.12"
+serde = { version = "1", features = ["derive"] }
+serde_json = "1"
+shuttle-axum = "0.57.0"
+shuttle-runtime = "0.57.0"
+tokio = "1"
+tower-http = { version = "0.6", features = ["fs"] }
 ```
 
 ```toml Shuttle.toml
