--- a/integrations/github.mdx
+++ b/integrations/github.mdx
@@ -37,7 +37,7 @@ To integrate GitHub with your Shuttle project, follow these steps:
 
 ## Deploying a GitHub Repository
 
-1. Navigate to [https://console.shuttle.dev/new-project](https://console.dev.shuttle.dev/new-project) and select “**Github Repository”.**
+1. Navigate to [https://console.shuttle.dev/new-project](https://console.dev.shuttle.dev/new-project) and select "**Github Repository**".
 
    ![image.png](attachment:8125a8ce-731d-4ed0-8302-b85982809532:d8355975-7425-4b81-87c1-957d8621bf00.png)
 
@@ -65,7 +65,7 @@ To integrate GitHub with your Shuttle project, follow these steps:
 
 ## Connecting a Github Repository to an existing project
 
-1. Navigate to **project** **settings** of your desired project. If you haven’t already connect your Github account to Shuttle.
+1. Navigate to **project** **settings** of your desired project. If you haven't already connect your Github account to Shuttle.
 2. Once authorized, you'll see a list of your available repositories. Select the repository you want to connect to this Shuttle project.
 
    ![image.png](attachment:457d7ee0-29d9-40ea-883b-c936f55f80a5:2023e252-19fb-4924-aa08-a9dba030579d.png)
@@ -93,12 +93,12 @@ We maintain a collection of templates you can deploy with a single click. These 
 
 Deploying a template sets up both the Shuttle project and a new GitHub repository in your connected GitHub account. You get a fully functional application deployed on Shuttle with the complete source code in your GitHub account.
 
-1. Navigate to [https://console.shuttle.dev/new-project](https://console.dev.shuttle.dev/new-project) and select “**Template”.**
+1. Navigate to [https://console.shuttle.dev/new-project](https://console.dev.shuttle.dev/new-project) and select "**Template**".
 2. Select desired template.
 
    ![image.png](attachment:6e562dc1-f3c5-401d-b418-6a2f69c95ea4:77ff82bb-ac19-4755-ab8e-cbc4356a8080.png)
 
-3. Choose “**Deploy from Github**” development flow and authorise if required.
+3. Choose "**Deploy from Github**" development flow and authorise if required.
 
    ![image.png](attachment:cc09e413-2102-4471-a76f-a24a0f1db5df:92961f35-4f42-42b2-a95a-a04b949517a0.png)
 
